--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@rollup/plugin-replace": "^5.0.2",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "@types/scheduler": "^0.16.3",
     "@typescript-eslint/parser": "^5.52.0",
     "@vitejs/plugin-react": "^3.1.0",
     "eslint": "^8.34.0",
@@ -35,5 +36,8 @@
     "rollup-plugin-typescript2": "^0.34.1",
     "typescript": "^4.9.5",
     "vite": "^4.1.0"
+  },
+  "dependencies": {
+    "scheduler": "^0.23.0"
   }
 }
